--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,7 +15,7 @@
 }
 
 #main-content {
-  height: calc(100% - #{$nav-bar-height});
+  height: calc(100% - #{$nav-bar-height} - #{$footer-height});
   width: 100%;
   display: flex;
 }
