--- a/src/styles/terminal.scss
+++ b/src/styles/terminal.scss
@@ -2,6 +2,7 @@
 
 #terminal {
   @include border(top);
+  @include custom-scroll-bar();
   width: 100%;
   max-height: 200px;
   min-height: 200px;
@@ -23,18 +24,4 @@
   .blue {
     color: #89ddff;
   }
-}
-
-#terminal::-webkit-scrollbar {
-  width: 0.5em;
-}
-
-#terminal::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
-#terminal::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background: rgb(63, 63, 63);
 }
