--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -36,3 +36,19 @@ $footer-height: 30px;
     color: $highlight-color-active;
   }
 }
+
+@mixin custom-scroll-bar() {
+  &::-webkit-scrollbar {
+    width: 0.5em;
+  }
+
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: rgb(63, 63, 63);
+  }
+}
