add some stuff to the navbar

--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,5 +1,6 @@
 $bg-color: #0f111a;
-$border-color: white; //#0c0e15;
+$bg-color-light: #1d1f28;
+$border-color: #2d2a3c;
 $text-color: #7e93a2;
 $subtext-color: #4b526d;
 $highlight-color: #03b0c1;
