--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -5,9 +5,9 @@
   width: 300px;
   height: 100%;
   padding-left: 20px;
-}
 
-#side-bar #header {
-  font-weight: bold;
-  font-size: 20px;
+  #header {
+    font-weight: bold;
+    font-size: 20px;
+  }
 }
