--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -7,8 +7,7 @@
   display: flex;
   align-items: center;
 
-  a {
-    all: unset;
+  p {
     cursor: pointer;
     font-size: 18px;
     font-weight: bold;
