--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -5,9 +5,45 @@
   width: 300px;
   height: 100%;
   padding-left: 20px;
+  font-weight: bold;
 
   #header {
-    font-weight: bold;
-    font-size: 20px;
+    font-size: 18px;
+    margin: 10px 0 0;
+  }
+
+  #sub-header {
+    margin: 5px 0 15px;
+  }
+
+  .explorer-element {
+    font-size: 16px;
+    cursor: pointer;
+    user-select: none;
+
+    p {
+      margin: 8px 0;
+    }
+
+    p:hover {
+      color: white;
+    }
+
+    span {
+      font-size: 20px;
+      display: inline-block;
+      transform: translateY(3px);
+      margin-right: 5px;
+    }
+
+    .closed {
+      display: none;
+    }
+
+    .explorer-children-container {
+      @include border(left);
+      margin-left: 10px;
+      padding-left: 30px;
+    }
   }
 }
