--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -29,9 +29,8 @@
       color: white;
     }
 
-    span {
+    i {
       font-size: 20px;
-      display: inline-block;
       transform: translateY(3px);
       margin-right: 5px;
     }
