--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,7 +15,7 @@
 }
 
 #main-container {
-  width: 100%;
+  width: calc(100vw - #{$side-bar-width});
   display: flex;
   flex-direction: column;
   justify-content: space-between;
