--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -4,19 +4,24 @@ $border-color: #2d2a3c;
 $text-color: #7e93a2;
 $subtext-color: #4b526d;
 $highlight-color: #03b0c1;
-$highlight-color-hover: #00565e;
+$highlight-color-hover: #16d2e4;
 $highlight-color-active: #00363b;
 
 $nav-bar-height: 70px;
-$footer-height: 30px;
-$side-bar-width: 250px;
+$footer-height: 44px;
+$side-bar-width: 280px;
+
+$bp-xs: 480px;
+$bp-sm: 640px;
+$bp-md: 768px;
+$bp-lg: 1024px;
 
 @mixin border($sides: all) {
   @if $sides == all {
-    border: 3px solid $border-color;
+    border: 2px solid $border-color;
   } @else {
     @each $side in $sides {
-      border-#{$side}: 3px solid $border-color;
+      border-#{$side}: 2px solid $border-color;
     }
   }
 
@@ -46,7 +51,6 @@ $side-bar-width: 250px;
   }
 
   &::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   }
 
