--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,17 +2,18 @@
 
 #footer {
   @include border(top);
-  height: $footer-height;
+  min-height: $footer-height;
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  padding: 0 10px;
+  gap: 8px 16px;
+  padding: 8px 12px;
 
   p {
     margin: 0;
     color: $subtext-color;
-    font-size: 14px;
-    margin-right: 40px;
+    font-size: 0.875rem;
   }
 
   .link {
