--- a/src/styles/mainstates/codeview.scss
+++ b/src/styles/mainstates/codeview.scss
@@ -4,7 +4,7 @@
   @include custom-scroll-bar();
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
+  overflow: auto;
 
   & > span {
     @include custom-scroll-bar();
@@ -14,7 +14,7 @@
 
 #image-container {
   width: 100%;
-  height: 100%;
+  min-height: 280px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,5 +23,6 @@
   img {
     max-width: 100%;
     max-height: 100%;
+    height: auto;
   }
 }
