--- a/src/styles/mainstates/default.scss
+++ b/src/styles/mainstates/default.scss
@@ -2,31 +2,39 @@
 
 #default-display {
   display: flex;
-  height: 100%;
+  min-height: 100%;
   width: 100%;
 
   #content {
     margin: auto;
     width: 100%;
+    max-width: 720px;
     text-align: center;
 
     img {
-      width: 20%;
+      width: clamp(120px, 35vw, 220px);
       height: auto;
     }
 
-    h1 span {
-      color: $highlight-color;
+    h1 {
+      font-size: clamp(1.6rem, 4vw, 2.4rem);
+      margin: 12px 0;
+
+      span {
+        color: $highlight-color;
+      }
     }
 
     h2 {
-      margin-top: 30px;
+      margin-top: 20px;
       font-style: italic;
+      font-size: clamp(1rem, 3vw, 1.4rem);
     }
 
     #descriptor {
-      font-size: 2em;
+      font-size: clamp(1.1rem, 3.2vw, 2rem);
       font-weight: bold;
+      min-height: 2.4rem;
     }
 
     #resume-view-click {
