--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,54 +1,77 @@
 @import "utils";
 
-#side-bar {
-  @include border(right);
-  @include custom-scroll-bar();
-  width: $side-bar-width;
-  height: 100%;
-  padding-left: 20px;
-  font-weight: bold;
-  overflow-x: hidden;
-  overflow-y: scroll;
+.side-bar {
+  display: none;
 
-  #header {
-    font-size: 18px;
-    margin: 10px 0 0;
+  &.drawer-variant {
+    display: block;
+    border: 0;
+    width: 100%;
+    padding: 0;
+    max-height: 45dvh;
+
+    .explorer-element p {
+      min-height: 44px;
+    }
   }
+}
 
-  #sub-header {
-    margin: 5px 0 15px;
-  }
+@media (min-width: $bp-md) {
+  .side-bar {
+    @include border(right);
+    @include custom-scroll-bar();
+    width: $side-bar-width;
+    height: 100%;
+    padding: 16px;
+    font-weight: bold;
+    overflow-x: hidden;
+    overflow-y: auto;
+    display: block;
 
-  .explorer-element {
-    font-size: 16px;
-    cursor: pointer;
-    user-select: none;
+    #header {
+      font-size: 1.1rem;
+      margin: 0;
+    }
 
-    p {
-      margin: 8px 0;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
+    #sub-header {
+      margin: 8px 0 16px;
+      font-size: 0.95rem;
+    }
 
-      &:hover {
-        color: white;
+    .explorer-element {
+      font-size: 0.95rem;
+      cursor: pointer;
+      user-select: none;
+
+      p {
+        margin: 8px 0;
+        min-height: 36px;
+        display: flex;
+        align-items: center;
+
+        &:hover {
+          color: white;
+        }
+      }
+
+      i {
+        font-size: 18px;
+        margin-right: 6px;
+      }
+
+      .closed {
+        display: none;
+      }
+
+      .explorer-children-container {
+        @include border(left);
+        margin-left: 8px;
+        padding-left: 12px;
       }
     }
 
-    i {
-      font-size: 20px;
-      transform: translateY(3px);
-      margin-right: 5px;
-    }
-
-    .closed {
+    &.drawer-variant {
       display: none;
-    }
-
-    .explorer-children-container {
-      @include border(left);
-      margin-left: 10px;
-      padding-left: 20px;
     }
   }
 }
