--- a/src/styles/terminal.scss
+++ b/src/styles/terminal.scss
@@ -4,17 +4,16 @@
   @include border(top);
   @include custom-scroll-bar();
   width: 100%;
-  max-height: 200px;
-  min-height: 200px;
+  max-height: 240px;
+  min-height: 240px;
   color: white;
-  padding: 20px;
-  font-size: 14px;
-  overflow-y: scroll;
+  padding: 16px;
+  font-size: 0.9rem;
+  overflow-y: auto;
 
   p {
     margin: 0;
-    width: min-content;
-    white-space: nowrap;
+    white-space: normal;
   }
 
   .green {
